# zefir-os

./: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
.cargo/: config.toml
kernel/: .rustc_info.json  Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  framebuffer.rs  gdt.rs  interrupts.rs  kernel.rs  main.rs  memory.rs  panic.rs  test_runner.rs
kernel/src/task/: mod.rs
src/: main.rs
test-runner/: Cargo.toml
