[package]
name = "zefir-os"
version = "0.1.0"
edition = "2021"

[build-dependencies]
zefir-os-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.5"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[dev-dependencies]
test_runner = { path = "test-runner" }

[workspace]
members = ["kernel", "test-runner"]
