[package]
name = "zefir-os-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zefir-os-kernel"
path = "src/kernel.rs"

[dependencies]
bootloader_api = "0.11.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
noto-sans-mono-bitmap = "0.2.0"
spin = "0.9.8"
volatile = "0.5.1"
x86_64 = "0.14.11"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
