[package]
name = "zefir-os-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zefir-os-kernel"
path = "src/kernel.rs"

[dependencies]
acpi = "5.0.0"
bootloader_api = "0.11.5"
crossbeam-queue = { version = "0.3.10", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
noto-sans-mono-bitmap = "0.2.0"
spin = "0.9.8"
volatile = "0.5.1"
x86_64 = "0.14.11"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
